src/app/components/header.component/header.component.scss
.example-spacer {
  flex: 1 1 auto;
}

strong {
  color: rgb(8, 30, 70);
}

a {
  text-decoration: none;
  color: inherit;
}

a:visited {
  text-decoration: none;
  color: inherit;
}

.category-dropdown {
  position: relative;
  display: inline-block;
  margin-left: 0.3rem;


  .dropdown-button {
    padding: 0.6rem 1rem;
    border-radius: 90rem;
    border: 1px solid #ccc;
    background: white;
    color: #333;
    font-size: 1rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    min-width: 9.7rem;

    .label {
    font-weight: 500;
    color: #333; // pode ajustar aqui pra mais escuro (#000) ou uma cor azul discreta (#003366)
  }
  }

  .arrow {
    transition: transform 0.3s ease;
    font-size: 1rem;
  }

  .arrow.open {
    transform: rotate(180deg);
  }

  .dropdown-menu {
    position: absolute;
    top: 110%;
    left: 0;
    z-index: 10;
    width: 100%;
    background: white;
    border: 1px solid #ccc;
    border-radius: 8px;
    padding: 0;
    margin-top: 0.5rem;
    list-style: none;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);

    li {
      padding: 0.75rem 1rem;
      cursor: pointer;
      font-size: 1rem;
      font-weight: 500; // destaque sutil no texto
      color: #333;
      transition: background-color 0.3s ease, color 0.3s ease;

      &:hover {
        background-color: #d3cdcd;
      }

      &.active {
        background-color: #003366;
        color: white;
      }
    }
  }
}

